--- a/webgl/audio-webgl.html
+++ b/webgl/audio-webgl.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <style>
     #canvas {
@@ -13,45 +14,46 @@
         /*border: 1px solid;*/
     }
 </style>
+
 <body>
-<canvas id="canvas"></canvas>
-<input type="file" id="file" accept="audio/*">
-<button onclick="play()">Play</button>
-<script src="../assets/lib/sgl.js"></script>
-<script>
-    let file = document.getElementById("file");
-    let canvas = document.getElementById("canvas")
+    <canvas id="canvas"></canvas>
+    <input type="file" id="file" accept="audio/*">
+    <button onclick="play()">Play</button>
+    <script src="../assets/lib/sgl.js"></script>
+    <script>
+        let file = document.getElementById("file");
+        let canvas = document.getElementById("canvas")
 
-    canvas.width = window.innerWidth
-    canvas.height = window.innerHeight
-    let gl = canvas.getContext("webgl2")
+        canvas.width = window.innerWidth
+        canvas.height = window.innerHeight
+        let gl = canvas.getContext("webgl2")
 
-    let audioCtx = new window.AudioContext();
+        let audioCtx = new window.AudioContext();
 
-    let audio = createAudio("https://cd.oldshensheep.com/s/HGo8cFAfNLnY34N/download/%E3%80%90%E5%8E%9F%E7%A5%9E%E3%80%91%E7%A5%9E%E9%87%8C%E7%BB%AB%E5%8D%8E%E3%80%8C%E7%99%BD%E9%B9%AD%E5%BD%92%E5%BA%AD%E3%80%8D.flac", true);
-    let source = audioCtx.createMediaElementSource(audio);
+        let audio = createAudio("https://webdav.oldshensheep.com/rclone/web/%E3%80%90%E5%8E%9F%E7%A5%9E%E3%80%91%E7%A5%9E%E9%87%8C%E7%BB%AB%E5%8D%8E%E3%80%8C%E7%99%BD%E9%B9%AD%E5%BD%92%E5%BA%AD%E3%80%8D.flac", true);
+        let source = audioCtx.createMediaElementSource(audio);
 
-    let options = {
-        'fftSize': 2048,
-        'maxDecibels': -30,
-        'minDecibels': -100,
-        'smoothingTimeConstant': 0.8
-    }
-    let analyser = new AnalyserNode(audioCtx, options)
+        let options = {
+            'fftSize': 2048,
+            'maxDecibels': -30,
+            'minDecibels': -100,
+            'smoothingTimeConstant': 0.8
+        }
+        let analyser = new AnalyserNode(audioCtx, options)
 
-    console.log(audioCtx, analyser)
+        console.log(audioCtx, analyser)
 
-    let binCount = analyser.frequencyBinCount;
-    let x = new Float32Array(binCount)
-    let y = new Uint8Array(binCount);
-    for (let i = 0; i < 2 * binCount; i += 2) {
-        x[i / 2] = i / binCount - 1;
-    }
+        let binCount = analyser.frequencyBinCount;
+        let x = new Float32Array(binCount)
+        let y = new Uint8Array(binCount);
+        for (let i = 0; i < 2 * binCount; i += 2) {
+            x[i / 2] = i / binCount - 1;
+        }
 
-    console.log(x)
-    console.log(binCount)
+        console.log(x)
+        console.log(binCount)
 
-    let vertexShaderSource = `#version 300 es
+        let vertexShaderSource = `#version 300 es
     in float x;
     in float y;
     out vec4 v_color;
@@ -69,7 +71,7 @@
     }
     `
 
-    let fragmentShaderSource = `#version 300 es
+        let fragmentShaderSource = `#version 300 es
      precision highp float;
 
      in vec4 v_color;
@@ -78,51 +80,52 @@
       OutColor = v_color;
      }
     `
-    file.onchange = function () {
-        let fr = new FileReader();
-        fr.readAsDataURL(document.getElementById("file").files[0]);
-        fr.onload = e => {
+        file.onchange = function () {
+            let fr = new FileReader();
+            fr.readAsDataURL(document.getElementById("file").files[0]);
+            fr.onload = e => {
+                audioCtx.resume()
+                audio.src = e.target.result
+                audio.play();
+            };
+        }
+
+        let glProgram = initShader(gl, vertexShaderSource, fragmentShaderSource);
+
+        setVertexAttribArray(gl, glProgram, x, gl.FLOAT, "x", 1, false)
+
+
+        function play() {
+            // The AudioContext was not allowed to start. It must be resumed (or created) after a user gesture on the page.
             audioCtx.resume()
-            audio.src = e.target.result
+            source.connect(analyser);
+            analyser.connect(audioCtx.destination);
             audio.play();
-        };
-    }
 
-    let glProgram = initShader(gl, vertexShaderSource, fragmentShaderSource);
+        }
 
-    setVertexAttribArray(gl, glProgram, x, gl.FLOAT, "x", 1, false)
-
-
-    function play() {
-        // The AudioContext was not allowed to start. It must be resumed (or created) after a user gesture on the page.
-        audioCtx.resume()
-        source.connect(analyser);
-        analyser.connect(audioCtx.destination);
-        audio.play();
-
-    }
-
-    function createAudio(src, loop) {
-        let audio = new Audio(src);
-        audio.loop = loop || true;
-        audio.crossOrigin = "anonymous";
-        audio.load();
-        return audio;
-    }
+        function createAudio(src, loop) {
+            let audio = new Audio(src);
+            audio.loop = loop || true;
+            audio.crossOrigin = "anonymous";
+            audio.load();
+            return audio;
+        }
 
 
-    function render() {
-        analyser.getByteFrequencyData(y)
-        console.log(y)
+        function render() {
+            analyser.getByteFrequencyData(y)
+            console.log(y)
 
-        setVertexAttribArray(gl, glProgram, y, gl.UNSIGNED_BYTE, "y", 1, true, gl.DYNAMIC_DRAW)
-        gl.drawArrays(gl.LINE_STRIP, 0, binCount)
-        requestAnimationFrame(render)
-    }
+            setVertexAttribArray(gl, glProgram, y, gl.UNSIGNED_BYTE, "y", 1, true, gl.DYNAMIC_DRAW)
+            gl.drawArrays(gl.LINE_STRIP, 0, binCount)
+            requestAnimationFrame(render)
+        }
 
-    render()
+        render()
 
 
-</script>
+    </script>
 </body>
+
 </html>
